syntax = "proto3";

import "shim.proto";
import "user_service_data.proto";
import "user_status.proto";

option java_package = "dgrubjesic.omni.shared.user";
option java_multiple_files = true;

message UserServiceProto {
  string id = 1;
  Meta meta = 2;
  UserStatus status = 3;
  oneof data {
    UserCreationDataProto creation = 4;
    UserDeletionDataProto deletion = 5;
    UserDataProto data_proto = 6;
  }
}