syntax = "proto3";

option java_package = "dgrubjesic.omni.shared.user.data";
option java_multiple_files = true;

message UserCreationDataProto {
  string name = 1;
  string password = 2;
  string email = 3;
}

message UserDeletionDataProto {
  string id = 1;
}

message UserDataProto {
  string id = 1;
  string email = 3;
}